cabal-version:       >= 1.10
name:                netcode-io
version:             0.0.1.0
synopsis:            Bindings to the low-level netcode.io library.
-- description:
homepage:            http://www.github.com/Mokosha/netcode-io
bug-reports:         http://www.github.com/Mokosha/netcode-io 
license:             BSD3
license-file:        LICENSE
author:              Pavel Krajcevski
maintainer:          krajcevski@gmail.com
copyright:           Pavel Krajcevski, 2020
category:            Network
build-type:          Simple
extra-source-files:  README.md

source-repository head
  type:      git
  location:  https://www.github.com/Mokosha/netcode-io.git

library
  ghc-options:         -Wall -static -fPIC
  include-dirs:        netcode.io
  c-sources:           netcode.io/netcode.c
  cc-options:          -std=c99 -static
  ld-options:          -static
  extra-libraries:     sodium

  if os(mingw32)
    extra-libraries:   ws2_32

  exposed-modules:     Bindings.Netcode.IO
  -- other-modules:
  -- other-extensions:
  build-tools:         hsc2hs
  build-depends:       base >=4.12
                     , bindings-DSL
  default-language:    Haskell2010

flag examples
  description: If true, build the examples
  default:     False

executable netcode-io-example
  default-language:    Haskell2010
  main-is:             Example.hs
  hs-source-dirs:      examples
  ghc-options:         -Wall -static -fPIC
  build-depends:       base > 4
                     , netcode-io

  if flag(examples)
    buildable:         True
  else
    buildable:         False