cabal-version:       >= 1.10
name:                netcode-io
version:             0.0.1.0
synopsis:            Bindings to the low-level netcode.io library.
-- description:
homepage:            http://www.github.com/Mokosha/netcode-io
bug-reports:         http://www.github.com/Mokosha/netcode-io 
license:             BSD3
license-file:        LICENSE
author:              Pavel Krajcevski
maintainer:          krajcevski@gmail.com
copyright:           Pavel Krajcevski, 2020
category:            Network
build-type:          Simple
extra-source-files:  README.md
                  ,  netcode.io/netcode.h
                  ,  netcode.io/netcode.c

source-repository head
  type:      git
  location:  https://www.github.com/Mokosha/netcode-io.git

library
  ghc-options:         -Wall -fPIC
  include-dirs:        netcode.io
  c-sources:           netcode.io/netcode.c
  cc-options:          -std=c99 -DNDEBUG -DNETCODE_ENABLE_TESTS=1
  extra-libraries:     sodium

  if os(mingw32)
    -- To make life easy on windows, we encourage using static libraries where
    -- possible. That way we don't need to go around copying .dll files.
    ld-options:        -static
    extra-libraries:   ws2_32

  exposed-modules:     Bindings.Netcode.IO
                     , Netcode.IO
  -- other-modules:
  -- other-extensions:
  build-tools:         hsc2hs
  build-depends:       base >= 4.12
                     , bindings-DSL
  default-language:    Haskell2010

flag examples
  description: If true, build the examples
  default:     False

executable netcode-io-example
  default-language:    Haskell2010
  main-is:             Example.hs
  hs-source-dirs:      examples
  ghc-options:         -Wall -static -fPIC
  build-depends:       base > 4
                     , netcode-io

  if flag(examples)
    buildable:         True
  else
    buildable:         False

executable netcode-io-clientserver
  default-language:    Haskell2010
  main-is:             ClientServer.hs
  hs-source-dirs:      examples
  ghc-options:         -Wall -static -fPIC
  build-depends:       base > 4
                     , netcode-io

  if flag(examples)
    buildable:         True
  else
    buildable:         False